A bunch of very useful changes:  - moved content of client.pp and server.pp to init.pp  - fixed file permissions for nrpe.cfg  - server config:    - added missing parameters    - fixed cgi.cfg location    - changed servicegroups to additional_servicegroups  - undid the outsourcing of long commands from commands.pp to templates as they are not read correctly  - added default service groups  - deleted obsolete configs  - added apache configs for Nagios and PNP4Nagios  - added nsca send config  - added permission fixes for nagios*.cfg files (no longer needs sudo)  - fixed automatic creation of tcp traffic tests (one for each NIC)  - added nagios host parameter  - updated TODO list  - replaced apache::vhost with config template  - formatted some manifests  - simplified manifests

--- a/templates/plugins/check_nagios_config_passive.erb
+++ b/templates/plugins/check_nagios_config_passive.erb
@@ -54,5 +54,5 @@ sub pushNagios {
         my $status = shift;
         my $text = shift;
         $text =~ s/[^0-9a-z-\.\ _]//gi;
-        my $return = `echo "$hostname,Nagios config,$status,$text" | /usr/sbin/send_nsca -d , -H <%= scope.lookupvar("::monitoring_server") %>`;
+        my $return = `echo "$hostname,Nagios config,$status,$text" | /usr/sbin/send_nsca -d , -H <%= @nagios_server %>`;
 }
