--- a/templates/plugins/check_kernel_passive.erb
+++ b/templates/plugins/check_kernel_passive.erb
@@ -71,6 +71,6 @@ sub pushNagios {
 	my $status = shift;
 	my $text = shift;
 	$text =~ s/[^0-9a-z-\.\ _]//gi;
-	my $return = `echo "$hostname,Kernel,$status,$text" | /usr/sbin/send_nsca -d , -H <%= scope.lookupvar("::monitoring_server") %>`;
+	my $return = `echo "$hostname,Kernel,$status,$text" | /usr/sbin/send_nsca -d , -H <%= @nagios_server %>`;
 }
 
